--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "firebase": "^6.1.0",
+    "firebase-admin": "^8.0.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "immutable": "^3.8.2",
