--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -28,7 +28,6 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "firebase": "^6.1.0",
-    "firebase-admin": "^8.0.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "immutable": "^3.8.2",
@@ -48,7 +47,9 @@
     "react": "16.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "16.1",
+    "react-google-login": "^5.0.4",
     "react-helmet": "^5.2.0",
+    "react-kakao-login": "^1.1.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
